refactor sections grid + blur menu

--- a/src/index.html
+++ b/src/index.html
@@ -47,18 +47,18 @@
                         </div>
                         <a class="menu_navigation-link" href="#situation_centre">Мобильный ситуационный центр</a>
                     </li>
-                    <li class="menu_navigation-item">
-                        <div class="menu_wrapper_img">
-                            <img src="./img/layout/pages/main/menu_icon/boat.svg" alt="водный патруль" class="menu_nav-img">
-                        </div>
-                        <a class="menu_navigation-link" href="#situation_centre">водный патруль</a>
-                    </li>
-                    <li class="menu_navigation-item">
-                        <div class="menu_wrapper_img">
-                            <img src="./img/layout/pages/main/menu_icon/bicycle.svg" alt="велопатруль" class="menu_nav-img">
-                        </div>
-                        <a class="menu_navigation-link" href="#situation_centre">велопатруль</a>
-                    </li>
+<!--                    <li class="menu_navigation-item">-->
+<!--                        <div class="menu_wrapper_img">-->
+<!--                            <img src="./img/layout/pages/main/menu_icon/boat.svg" alt="водный патруль" class="menu_nav-img">-->
+<!--                        </div>-->
+<!--                        <a class="menu_navigation-link" href="#situation_centre">водный патруль</a>-->
+<!--                    </li>-->
+<!--                    <li class="menu_navigation-item">-->
+<!--                        <div class="menu_wrapper_img">-->
+<!--                            <img src="./img/layout/pages/main/menu_icon/bicycle.svg" alt="велопатруль" class="menu_nav-img">-->
+<!--                        </div>-->
+<!--                        <a class="menu_navigation-link" href="#situation_centre">велопатруль</a>-->
+<!--                    </li>-->
                     <li class="menu_navigation-item">
                         <div class="menu_wrapper_img">
                             <img src="./img/layout/pages/main/menu_icon/firstaid.svg" alt="Служба помощи" class="menu_nav-img">
@@ -87,16 +87,26 @@
                 <h1 class="main_title">
                     <span>Более 20 лет ЦОДД</span> <span>делает дор<span class="large_letter"></span>ги Москвы</span> <span>безопасными и удобными</span>
                 </h1>
-                <div class="main_info-wrapper">
-                    <div class="main_info">
-                        <div class="main_info-descr">
-                            <p class="main_info-text">
-                                Сегодня здесь находится одна из крупнейших в мире систем управления дорожным движением с крупными инфраструктурными и ИТ-проектами
-                            </p>
-                            <p class="main_info-text">
-                                Для эффективного выполнения своих задач в ЦОДД создан автопарк, в котором представлен самый разнообразный транспорт: от брутальных пикапов до элетровелосипедов, от мобильных центров управления городом до речных катеров
-                            </p>
-                        </div>
+                <div class="main_grid-wrapper">
+                    <div class="main_text-1">
+                        <p class="main_info-text">
+                            Сегодня здесь находится одна из крупнейших в мире систем управления дорожным движением с крупными инфраструктурными и ИТ-проектами
+                        </p>
+                    </div>
+                    <div class="main_text-2">
+                        <p class="main_info-text">
+                            Для эффективного выполнения своих задач в ЦОДД создан автопарк, в котором представлен самый разнообразный транспорт: от брутальных пикапов до элетровелосипедов, от мобильных центров управления городом до речных катеров
+                        </p>
+                    </div>
+                    <div class="main_text-mobile">
+                        <p class="main_info-text">
+                            Сегодня здесь находится одна из крупнейших в мире систем управления дорожным движением с крупными инфраструктурными и ИТ-проектами
+                        </p>
+                        <p class="main_info-text">
+                            Для эффективного выполнения своих задач в ЦОДД создан автопарк, в котором представлен самый разнообразный транспорт: от брутальных пикапов до элетровелосипедов, от мобильных центров управления городом до речных катеров
+                        </p>
+                    </div>
+                    <div class="main_button-3">
                         <a class="main_info-link" href="./pages/amarok.html">в виртуальный гараж</a>
                     </div>
                 </div>
@@ -106,6 +116,10 @@
 
     <div class="line">
         <div class="container_main"></div>
+    </div>
+
+    <div class="block_blur">
+
     </div>
 
     <section class="traffic_patrol" id="traffic_patrol">
@@ -300,6 +314,30 @@
                 <div class="man_plus_major_events-8">
                     <p class="man_plus_major_events-text">Мобильный Ситцентр построен на базе автобуса MAN. В его салоне размещены рабочие места для специалистов, зал совещаний, системы связи и проч. Он полностью автономен, и может работать как во время стоянки, так и в движении.</p>
                     <p class="man_plus_major_events-text">Когда в городе проходят крупные мероприятия, и нужна максимальная оперативность, на месте работает мобильный Ситуационный центр. Полный аналог стационарного — только на колесах.</p>
+                </div>
+                <div class="employ_text">
+                    <div class="employ_text-wrapper">
+                        <div class="employ_text_img">
+                            <img src="./img/layout/pages/main/employ.png" alt="Работник Мобильного Ситуационного центра" class="employ">
+                        </div>
+                        <div class="employ_text_info">
+                            <p class="employ_descr">
+                                Когда в городе проходят крупные мероприятия, и нужна максимальная оперативность, на месте работает мобильный Ситуационный центр. Полный аналог стационарного — только на колесах.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bus_text">
+                    <div class="bus_text-wrapper">
+                        <div class="bus_text_img">
+                            <img src="./img/layout/pages/main/bus.jpg" alt="Ситуационный центр" class="bus">
+                        </div>
+                        <div class="bus_text_info">
+                            <p class="bus_descr">
+                                Мобильный Ситцентр построен на базе автобуса MAN. В его салоне размещены рабочие места для специалистов, зал совещаний, системы связи и проч. Он полностью автономен.
+                            </p>
+                        </div>
+                    </div>
                 </div>
                 <div class="employ_plus_bus_slider">
                     <div class="situation_centre_slider-wrapper swiper2">
@@ -613,11 +651,11 @@
                             <p class="footer-menu-title">Транспорт</p>
                         </div>
                         <div class="footer-menu-links">
-                            <a href="#" class="footer-menu-link">Дорожный патруль</a>
-                            <a href="#" class="footer-menu-link">Мобильный ситуационный центр</a>
-                            <a href="#" class="footer-menu-link">Водный патруль</a>
-                            <a href="#" class="footer-menu-link">Велопатруль</a>
-                            <a href="#" class="footer-menu-link">Служба помощи</a>
+                            <a href="#traffic_patrol" class="footer-menu-link">Дорожный патруль</a>
+                            <a href="#situation_centre" class="footer-menu-link">Мобильный ситуационный центр</a>
+<!--                            <a href="#" class="footer-menu-link">Водный патруль</a>-->
+<!--                            <a href="#" class="footer-menu-link">Велопатруль</a>-->
+                            <a href="#help_desk" class="footer-menu-link">Служба помощи</a>
                         </div>
                     </div>
                 </div>
