--- a/src/index.html
+++ b/src/index.html
@@ -114,10 +114,6 @@
         </div>
     </section>
 
-    <div class="line">
-        <div class="container_main"></div>
-    </div>
-
     <div class="block_blur">
 
     </div>
@@ -451,66 +447,110 @@
                 </div>
                 <div class="equipment_mobile">
                     <div class="equipment_mobile_control">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                         <img src="./img/layout/pages/main/invent.svg" alt="Меню" class="equipment_mobile_control-img1">
                         <p class="equipment_mobile_control-title">Инвентарь</p>
                         <img src="./img/layout/pages/main/invent_arrow.svg" alt="Стрелка" class="equipment_mobile_control-img2">
                     </div>
                     <div class="equipment_mobile_skills">
                         <div class="skill-1">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                             <div class="skill_content">
                                 <img src="./img/layout/pages/main/skill/skill-1.svg" alt="буксировочный трос" class="skill_img">
                                 <p class="skill_text">буксировочными тросами</p>
                             </div>
                         </div>
                         <div class="skill-2">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                             <div class="skill_content">
                                 <img src="./img/layout/pages/main/skill/skill-2.svg" alt="пусковое устройство" class="skill_img">
                                 <p class="skill_text">пусковыми устройствами</p>
                             </div>
                         </div>
                         <div class="skill-3">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                             <div class="skill_content">
                                 <img src="./img/layout/pages/main/skill/skill-3.svg" alt="огнетушитель" class="skill_img">
                                 <p class="skill_text">большими огнетушителями</p>
                             </div>
                         </div>
                         <div class="skill-4">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                             <div class="skill_content">
                                 <img src="./img/layout/pages/main/skill/skill-4.svg" alt="бланк европротокола" class="skill_img">
                                 <p class="skill_text">бланками европротокола</p>
                             </div>
                         </div>
                         <div class="skill-5">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                             <div class="skill_content">
                                 <img src="./img/layout/pages/main/skill/skill-5.svg" alt="жезл" class="skill_img">
                                 <p class="skill_text">жезлы для регулировки</p>
                             </div>
                         </div>
                         <div class="skill-6">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                             <div class="skill_content">
                                 <img src="./img/layout/pages/main/skill/skill-6.svg" alt="перевязочный набор" class="skill_img">
                                 <p class="skill_text">перевязочный набор</p>
                             </div>
                         </div>
                         <div class="skill-7">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                             <div class="skill_content">
                                 <img src="./img/layout/pages/main/skill/skill-7.svg" alt="чистая вода" class="skill_img">
                                 <p class="skill_text">чистой водой</p>
                             </div>
                         </div>
                         <div class="skill-8">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                             <div class="skill_content">
                                 <img src="./img/layout/pages/main/skill/skill-8.svg" alt="конус" class="skill_img">
                                 <p class="skill_text">конусами</p>
                             </div>
                         </div>
                         <div class="skill-9">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                             <div class="skill_content">
                                 <img src="./img/layout/pages/main/skill/skill-9.svg" alt="домкрат" class="skill_img">
                                 <p class="skill_text">домкратами</p>
                             </div>
                         </div>
                         <div class="skill-10">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                             <div class="skill_content">
                                 <img src="./img/layout/pages/main/skill/skill-10.svg" alt="аптечка" class="skill_img">
                                 <p class="skill_text">расширенная аптечка</p>
