footer gradient + new corners

--- a/src/index.html
+++ b/src/index.html
@@ -69,13 +69,25 @@
             </nav>
             <div class="menu-media">
                 <a class="media-wrapper" href="#">
-                    <img src="./img/layout/pages/main/footer/media_vk.svg" alt="vk">
+                    <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                    <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                    <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                    <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
+                    <img class="media-img" src="./img/layout/pages/main/footer/media_vk.svg" alt="vk">
                 </a>
                 <a class="media-wrapper" href="#">
-                    <img src="./img/layout/pages/main/footer/media_telegram.svg" alt="telegram">
+                    <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                    <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                    <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                    <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
+                    <img class="media-img" src="./img/layout/pages/main/footer/media_telegram.svg" alt="telegram">
                 </a>
                 <a class="media-wrapper" href="#">
-                    <img src="./img/layout/pages/main/footer/media_tel.svg" alt="Телефон">
+                    <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                    <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                    <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                    <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
+                    <img class="media-img" src="./img/layout/pages/main/footer/media_tel.svg" alt="Телефон">
                 </a>
             </div>
         </div>
@@ -369,7 +381,7 @@
             <div class="container_main">
                 <div class="help_desk_grid-wrapper">
                     <div class="help_desk-1">
-                        <h1 class="help_desk-title title">служба помощи</h1>
+                        <h1 class="help_desk-title title"><span class="help_desk-animation-1">служба</span> <span class="help_desk-animation-2">помощи</span></h1>
                     </div>
                     <div class="parkon-2">
                         <p class="parkon_title">110 автомобилей на базе мобильных комплексов фотовидеофиксации (так называемых «парконов»).</p>
@@ -384,60 +396,100 @@
                     <div class="equipment-4">
                         <div class="text">Каждый экипаж оборудован всем необходимым для помощи:</div>
                         <div class="skill-1">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                             <div class="skill_content">
                                 <img src="./img/layout/pages/main/skill/skill-1.svg" alt="буксировочный трос" class="skill_img">
                                 <p class="skill_text">буксировочными тросами</p>
                             </div>
                         </div>
                         <div class="skill-2">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                             <div class="skill_content">
                                 <img src="./img/layout/pages/main/skill/skill-2.svg" alt="пусковое устройство" class="skill_img">
                                 <p class="skill_text">пусковыми устройствами</p>
                             </div>
                         </div>
                         <div class="skill-3">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                             <div class="skill_content">
                                 <img src="./img/layout/pages/main/skill/skill-3.svg" alt="огнетушитель" class="skill_img">
                                 <p class="skill_text">большими огнетушителями</p>
                             </div>
                         </div>
                         <div class="skill-4">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                             <div class="skill_content">
                                 <img src="./img/layout/pages/main/skill/skill-4.svg" alt="бланк европротокола" class="skill_img">
                                 <p class="skill_text">бланками европротокола</p>
                             </div>
                         </div>
                         <div class="skill-5">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                             <div class="skill_content">
                                 <img src="./img/layout/pages/main/skill/skill-5.svg" alt="жезл" class="skill_img">
                                 <p class="skill_text">жезлы для регулировки</p>
                             </div>
                         </div>
                         <div class="skill-6">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                             <div class="skill_content">
                                 <img src="./img/layout/pages/main/skill/skill-6.svg" alt="перевязочный набор" class="skill_img">
                                 <p class="skill_text">перевязочный набор</p>
                             </div>
                         </div>
                         <div class="skill-7">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                             <div class="skill_content">
                                 <img src="./img/layout/pages/main/skill/skill-7.svg" alt="чистая вода" class="skill_img">
                                 <p class="skill_text">чистой водой</p>
                             </div>
                         </div>
                         <div class="skill-8">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                             <div class="skill_content">
                                 <img src="./img/layout/pages/main/skill/skill-8.svg" alt="конус" class="skill_img">
                                 <p class="skill_text">конусами</p>
                             </div>
                         </div>
                         <div class="skill-9">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                             <div class="skill_content">
                                 <img src="./img/layout/pages/main/skill/skill-9.svg" alt="домкрат" class="skill_img">
                                 <p class="skill_text">домкратами</p>
                             </div>
                         </div>
                         <div class="skill-10">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                            <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
                             <div class="skill_content">
                                 <img src="./img/layout/pages/main/skill/skill-10.svg" alt="аптечка" class="skill_img">
                                 <p class="skill_text">расширенная аптечка</p>
@@ -701,27 +753,51 @@
                 </div>
                 <div class="footer-contacts-3">
                     <a class="contacts-1" href="#">
-                        <img src="./img/layout/pages/main/footer/contact_internet.svg" alt="ЦОДД" class="contact-img">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
+                        <img class="contact-img" src="./img/layout/pages/main/footer/contact_internet.svg" alt="ЦОДД">
                         <p class="contact-link">Сайт ЦОДД</p>
                     </a>
                     <a class="contacts-2" href="#">
-                        <img src="./img/layout/pages/main/footer/media_tel.svg" alt="Телефон" class="contact-img">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
+                        <img class="contact-img" src="./img/layout/pages/main/footer/media_tel.svg" alt="Телефон">
                         <p class="contact-link">+7 (495) 539-54-54</p>
                     </a>
                     <a class="contacts-3" href="#">
-                        <img src="./img/layout/pages/main/footer/contact_mail.svg" alt="Почта" class="contact-img">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
+                        <img class="contact-img" src="./img/layout/pages/main/footer/contact_mail.svg" alt="Почта">
                         <p class="contact-link">codd@transport.mos.ru</p>
                     </a>
                 </div>
                 <div class="footer-media-4">
                     <a class="media-wrapper" href="#">
-                        <img src="./img/layout/pages/main/footer/media_vk.svg" alt="vk">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
+                        <img class="media-img" src="./img/layout/pages/main/footer/media_vk.svg" alt="vk">
                     </a>
                     <a class="media-wrapper" href="#">
-                        <img src="./img/layout/pages/main/footer/media_telegram.svg" alt="telegram">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
+                        <img class="media-img" src="./img/layout/pages/main/footer/media_telegram.svg" alt="telegram">
                     </a>
                     <a class="media-wrapper" href="#">
-                        <img src="./img/layout/pages/main/footer/media_tel.svg" alt="Телефон">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                        <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
+                        <img class="media-img" src="./img/layout/pages/main/footer/media_tel.svg" alt="Телефон">
                     </a>
                 </div>
             </div>
