video + animations gradient

--- a/src/index.html
+++ b/src/index.html
@@ -97,32 +97,37 @@
 
     <main class="gradient_move">
         <section class="main">
-            <div class="container_main">
-                <div class="main_bg">
-                    <h1 class="main_title">
-                        <span class="main_title-animation-1">Более 20 лет ЦОДД</span> <span class="main_title-animation-2">делает дор<span class="large_letter"></span>ги Москвы</span><span class="main_title-animation-3">безопасными и удобными</span>
-                    </h1>
-                    <div class="main_grid-wrapper">
-                        <div class="main_text-1">
-                            <p class="main_info-text">
-                                Сегодня здесь находится одна из крупнейших в мире систем управления дорожным движением с крупными инфраструктурными и ИТ-проектами
-                            </p>
-                        </div>
-                        <div class="main_text-2">
-                            <p class="main_info-text">
-                                Для эффективного выполнения своих задач в ЦОДД создан автопарк, в котором представлен самый разнообразный транспорт: от брутальных пикапов до элетровелосипедов, от мобильных центров управления городом до речных катеров
-                            </p>
-                        </div>
-                        <div class="main_text-mobile">
-                            <p class="main_info-text">
-                                Сегодня здесь находится одна из крупнейших в мире систем управления дорожным движением с крупными инфраструктурными и ИТ-проектами
-                            </p>
-                            <p class="main_info-text">
-                                Для эффективного выполнения своих задач в ЦОДД создан автопарк, в котором представлен самый разнообразный транспорт: от брутальных пикапов до элетровелосипедов, от мобильных центров управления городом до речных катеров
-                            </p>
-                        </div>
-                        <div class="main_button-3">
-                            <a class="main_info-link" href="./pages/amarok.html">в виртуальный гараж</a>
+            <div class="main_intro_media">
+                <video class="preview_video" src="./img/video/main_section.mp4" autoplay muted loop></video>
+            </div>
+            <div class="main_intro_content">
+                <div class="container_main">
+                    <div class="main_bg">
+                        <h1 class="main_title">
+                            <span class="main_title-animation-1">Более 20 лет ЦОДД</span> <span class="main_title-animation-2">делает дор<span class="large_letter"></span>ги Москвы</span><span class="main_title-animation-3">безопасными и удобными</span>
+                        </h1>
+                        <div class="main_grid-wrapper">
+                            <div class="main_text-1">
+                                <p class="main_info-text">
+                                    Сегодня здесь находится одна из крупнейших в мире систем управления дорожным движением с крупными инфраструктурными и ИТ-проектами
+                                </p>
+                            </div>
+                            <div class="main_text-2">
+                                <p class="main_info-text">
+                                    Для эффективного выполнения своих задач в ЦОДД создан автопарк, в котором представлен самый разнообразный транспорт: от брутальных пикапов до элетровелосипедов, от мобильных центров управления городом до речных катеров
+                                </p>
+                            </div>
+                            <div class="main_text-mobile">
+                                <p class="main_info-text">
+                                    Сегодня здесь находится одна из крупнейших в мире систем управления дорожным движением с крупными инфраструктурными и ИТ-проектами
+                                </p>
+                                <p class="main_info-text">
+                                    Для эффективного выполнения своих задач в ЦОДД создан автопарк, в котором представлен самый разнообразный транспорт: от брутальных пикапов до элетровелосипедов, от мобильных центров управления городом до речных катеров
+                                </p>
+                            </div>
+                            <div class="main_button-3">
+                                <a class="main_info-link" href="./pages/amarok.html">в виртуальный гараж</a>
+                            </div>
                         </div>
                     </div>
                 </div>
