--- a/src/index.html
+++ b/src/index.html
@@ -40,12 +40,22 @@
                             <img src="./img/layout/pages/main/menu_icon/police.svg" alt="дорожный патруль ЦОДД" class="menu_nav-img">
                         </div>
                         <a class="menu_navigation-link" href="#traffic_patrol">дорожный патруль ЦОДД</a>
+                        <div class="menu_preview-block">
+                            <div class="block-wrapper-video">
+                                <video class="menu_preview-video" src="./img/video/amarok.mp4" autoplay muted loop></video>
+                            </div>
+                        </div>
                     </li>
                     <li class="menu_navigation-item">
                         <div class="menu_wrapper_img">
                             <img src="./img/layout/pages/main/menu_icon/bus.svg" alt="Мобильный ситуационный центр" class="menu_nav-img">
                         </div>
                         <a class="menu_navigation-link" href="#situation_centre">Мобильный ситуационный центр</a>
+                        <div class="menu_preview-block">
+                            <div class="block-wrapper-video">
+                                <video class="menu_preview-video" src="./img/video/bus.mp4" autoplay muted loop></video>
+                            </div>
+                        </div>
                     </li>
 <!--                    <li class="menu_navigation-item">-->
 <!--                        <div class="menu_wrapper_img">-->
@@ -64,6 +74,11 @@
                             <img src="./img/layout/pages/main/menu_icon/firstaid.svg" alt="Служба помощи" class="menu_nav-img">
                         </div>
                         <a class="menu_navigation-link" href="#help_desk">Служба помощи</a>
+                        <div class="menu_preview-block">
+                            <div class="block-wrapper-video">
+                                <video class="menu_preview-video" src="./img/video/ford.mp4" autoplay muted loop></video>
+                            </div>
+                        </div>
                     </li>
                 </ul>
             </nav>
